--- a/autoSuggest.css
+++ b/autoSuggest.css
@@ -32,6 +32,7 @@ ul.as-selections li.as-selection-item {
 	background-color: #ddeefe;
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ddeefe), to(#bfe0f1));
 	background-image: -moz-linear-gradient(top, #ddeefe, #bfe0f1);
+	background-image: linear-gradient(top, #ddeefe, #bfe0f1);
 	border: 1px solid #acc3ec;
 	border-top-color: #c0d9e9;
 	padding: 2px 7px 2px 10px;
@@ -68,6 +69,7 @@ ul.as-selections li.as-selection-item.blur {
 	background-color: #f4f4f4;
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f4f4f4), to(#d5d5d5));
 	background-image: -moz-linear-gradient(top, #f4f4f4, #d5d5d5);
+	background-image: linear-gradient(top, #f4f4f4, #d5d5d5);
 	border-color: #bbb;
 	border-top-color: #ccc;
 	box-shadow: 0 1px 1px #e9e9e9;
@@ -84,6 +86,7 @@ ul.as-selections li:hover.as-selection-item {
 	background-color: #bbd4f1;
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#bbd4f1), to(#a3c2e5));
 	background-image: -moz-linear-gradient(top, #bbd4f1, #a3c2e5);
+	background-image: linear-gradient(top, #bbd4f1, #a3c2e5);
 	border-color: #6da0e0;
 	border-top-color: #8bb7ed;
 }
@@ -161,6 +164,7 @@ li.as-result-item.active {
 	background-color: #3668d9;
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 64%, from(rgb(110, 129, 245)), to(rgb(62, 82, 242)));
 	background-image: -moz-linear-gradient(top, rgb(110, 129, 245), rgb(62, 82, 242));
+	background-image: linear-gradient(top, rgb(110, 129, 245), rgb(62, 82, 242));
 	border-color: #3342e8;
 	color: #fff;
 	text-shadow: 0 1px 2px #122042;
